2005-04-15  Damien Sandras  <dsandras@gnome.org>

	* src/accounts.cpp: Allow '-' in hostnames.

2005-04-13  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp, src/endpoint.cpp, src/endpoint.h, 
	src/gnomemeeting.cpp, src/h323endpoint.cpp, src/h323endpoint.h,
	src/pref_window.cpp, src/sipendpoint.cpp, src/sipendpoint.h:
	Added the possibility to change the interface on which GnomeMeeting is
	listening.

2005-04-11  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/endpoint.h, src/h323endpoint.cpp,
	src/h323endpoint.h, src/sipendpoint.cpp, src/sipendpoint.h:
	Moved listeners initialisation to endpoint.cpp.

2005-04-11  Damien Sandras  <dsandras@gnome.org>

	* src/gnomemeeting.cpp, src/gnomemeeting.h, src/main_window.cpp,
	src/pref_window.cpp, src/pref_window.h, src/sipendpoint.cpp: Added
	function that detects the available interfaces and display them
	in the GUI.

	* gnomemeeting.schemas.in.in: Added key to store the default listening
	interface.

2005-04-11  Damien Sandras  <dsandras@gnome.org>

	* src/prefs_window.cpp: Merged Call Options and Call Forwarding.
	
2005-04-07  Damien Sandras  <dsandras@gnome.org>

	* src/ils.cpp, src/zeroconf_publisher.cpp: Use H323 port as default.

	* xdap_data/Makefile.am: Added PACKAGE_NAME support.

2005-04-07  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Incremented SCHEMA_AGE.
	
	* src/accounts.cpp, src/accounts.h, src/callbacks.cpp, src/config.cpp,
	src/gnomemeeting.cpp, src/gnomemeeting.h, src/main_window.cpp,
	src/pref_window.cpp, src/pref_window.h, src/sipendpoint.cpp: Moved
	the accounts preferences in their own separate window accessible
	from the Edit menu.	
	
	* gnomemeeting.schemas.in.in: Added default values for the new
	accounts window.
	
2005-04-06  Damien Sandras  <dsandras@gnome.org>

	* src/dbus_component.cpp: Fixed double free thanks to Philippe
	Normand. (#172773)

2005-04-06  Damien Sandras  <dsandras@gnome.org>

	* lib/stats_drawing_area.c, src/main_window.cpp, src/endpoint.cpp: